# cscsca_VSCode_extension_and_generator

./: .gitignore  Cargo.toml  README.md  grammar_gen.json
cscsca_extension/: .gitignore  README.md  package.json
cscsca_extension/syntaxes/: grammar.json
extension_base/: package.json
extension_base/snippets/: snippets.json
src/: main.rs
